--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -8,7 +8,7 @@
     position: relative;
     z-index: 0;
     &::before{
-        background: #001D38;
+        background: rgba(13,20,50,0.4);
         position: absolute;
         left: 0;
         top: 0;
