--- a/scss/_varriable.scss
+++ b/scss/_varriable.scss
@@ -5,7 +5,13 @@ $font1:  'Poppins', sans-serif;
 $font2:  'Poppins', sans-serif;
 // fonts-size
 
-$heading-color:#1F1F1F;
+$primary-color:#17c788;
+$white-color:#fff;
+
+
+// Heading color
+$heading-color:#0d1432;
+
 $gray-color: #bebebe;
 $gray-color-2: #bdbdbd;
 
