--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,13 +1,17 @@
 
 // services
 .section-gap{
-    padding-bottom: 120px;
+    width: 100%;
+	padding: 80px 0;
+}
+.bg-gray {
+    background-color: #f5f5f5 !important;
 }
 .services{
 	@media #{$mobile_device} {
         margin-bottom: 40px;
     }
-	@include transition(.3s);
+	@include transition(all 300ms ease-in-out 0s);
 	.icon{
 		line-height: 1.3;
 		position: relative;
@@ -18,8 +22,9 @@
 		transform: perspective(1px) translateZ(0);
 		box-shadow: 0 0 1px transparent;
 		span{
-			font-size:60px;
-			color: #d4ca68;
+			font-size: 45px;
+			line-height: 45px;			
+			color: $primary-color;
 			&:hover{
 				-webkit-animation-name: hvr-pulse-grow;
 				animation-name: hvr-pulse-grow;
@@ -34,13 +39,14 @@
 			}
 		}
 
+
 	}
 	.media-body{
 		width: 100%;
 		h3{
-			font-size: 24px;
+			font-size: 18px;
 			font-weight: 500;
-			color: #000;
+			color: #0d1432;
 		}
 		color: rgba(0,0,0,.8);
 		p{
@@ -48,7 +54,12 @@
 		}
 
 	}
-
+	&:hover{
+		background-color: #fff;
+		-webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.10);
+		-moz-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.10);
+		box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.10);
+	}
 	&.active{
 		background: #d4ca68;
 		.icon{
