--- a/scss/_popular_property.scss
+++ b/scss/_popular_property.scss
@@ -14,7 +14,6 @@
         margin-top: 30px;
     }
     .single_property{
-        @include border-radius(15px);
         overflow: hidden;
         margin-bottom: 30px;
         @include box-shadow(0 5px 15px rgba(0, 0, 0, .05));
@@ -45,7 +44,7 @@
        } 
        .property_content{
         padding: 25px;
-        border-bottom:1px solid #E8E8E8 ;
+        background: #f5f5f5;
            .main_pro{
                h3{
                    font-size: 16px;
