--- a/scss/_section_title.scss
+++ b/scss/_section_title.scss
@@ -1,7 +1,7 @@
 .section-title {
     position: relative;
     h2 {
-        color: #001D38;
+        color:$heading-color;
         font-size: 35px;
         line-height: 20px;
         position: relative;
