--- a/scss/style.css
+++ b/scss/style.css
@@ -75,7 +75,7 @@ li {
   list-style: none; }
 
 p {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 300;
   line-height: 28px;
   color: #4D4D4D;
@@ -472,6 +472,47 @@ h3 {
     background: #009DFF;
     color: #fff; }
 
+.section-title {
+  position: relative; }
+  .section-title h2 {
+    color: #001D38;
+    font-size: 35px;
+    line-height: 20px;
+    position: relative;
+    z-index: 2;
+    padding-top: 15px;
+    font-weight: 600; }
+    @media only screen and (min-width: 576px) and (max-width: 767px) {
+      .section-title h2 {
+        font-size: 38px; } }
+  .section-title .opacity-text.center {
+    left: 0;
+    right: 0; }
+  .section-title .opacity-text {
+    color: #f4f4f4;
+    font-size: 60px;
+    left: 0;
+    letter-spacing: 4px;
+    position: absolute;
+    top: -21px;
+    z-index: 1; }
+    @media (max-width: 767px) {
+      .section-title .opacity-text {
+        font-size: 38px;
+        top: -4px; } }
+
+.mb-38 {
+  margin-bottom: 38px; }
+
+.mt-31 {
+  margin-top: 31px; }
+
+.mb-25 {
+  margin-bottom: 25px; }
+
+.uppercase {
+  text-transform: uppercase; }
+
 .section_title h3 {
   font-size: 42px;
   font-weight: 500;
@@ -684,17 +725,7 @@ h3 {
           .header-area .main-header-area .Appointment .book_btn {
             margin-left: 0; } }
         .header-area .main-header-area .Appointment .book_btn a {
-          /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fdae5c+0,fd8e5e+100 */
-          background: #fdae5c;
-          /* Old browsers */
-          background: -moz-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
-          /* FF3.6-15 */
-          background: -webkit-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
-          /* Chrome10-25,Safari5.1-6 */
-          background: linear-gradient(to bottom, #fdae5c 0%, #fd8e5e 100%);
-          /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdae5c', endColorstr='#fd8e5e',GradientType=0 );
-          /* IE6-9 */
+          background: #cabe9f;
           padding: 13px 26px;
           font-size: 14px;
           font-weight: 400;
@@ -707,17 +738,9 @@ h3 {
             .header-area .main-header-area .Appointment .book_btn a {
               padding: 12px 20px; } }
           .header-area .main-header-area .Appointment .book_btn a:hover {
-            /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fdae5c+0,fd8e5e+100 */
-            background: #fdae5c;
-            /* Old browsers */
-            background: -moz-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
-            /* FF3.6-15 */
-            background: -webkit-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
-            /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom, #fdae5c 0%, #fd8e5e 100%);
-            /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdae5c', endColorstr='#fd8e5e',GradientType=0 );
-            /* IE6-9 */ }
+            background: #fff;
+            border: 1px solid #cabe9f;
+            color: #cabe9f; }
     .header-area .main-header-area .main-menu {
       text-align: center;
       padding: 12px 0; }
@@ -752,17 +775,7 @@ h3 {
           .header-area .main-header-area .main-menu ul li a::before {
             position: absolute;
             content: "";
-            /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fdae5c+0,fd8e5e+100 */
-            background: #fdae5c;
-            /* Old browsers */
-            background: -moz-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
-            /* FF3.6-15 */
-            background: -webkit-linear-gradient(top, #fdae5c 0%, #fd8e5e 100%);
-            /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom, #fdae5c 0%, #fd8e5e 100%);
-            /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdae5c', endColorstr='#fd8e5e',GradientType=0 );
-            /* IE6-9 */
+            background: #cabe9f;
             width: 100%;
             height: 3px;
             bottom: -33px;
@@ -831,7 +844,7 @@ h3 {
       -webkit-transition: transform 500ms ease, background 500ms ease;
       box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
       background: rgba(255, 255, 255, 0.96);
-      background: #2C2C2C; }
+      background: #3f4448; }
       @media (max-width: 767px) {
         .header-area .main-header-area.sticky {
           padding: 10px 10px; } }
@@ -844,7 +857,7 @@ h3 {
       .header-area .main-header-area.sticky ul li a::before {
         position: absolute;
         content: "";
-        background: #FDAE5C;
+        background: #cabe9f;
         width: 100%;
         height: 3px;
         bottom: -27px;
@@ -1888,8 +1901,7 @@ h3 {
     box-shadow: none; }
 
 .popular_property {
-  padding-top: 120px;
-  padding-bottom: 90px; }
+  padding: 80px 0; }
   .popular_property.plus_padding {
     padding-top: 186px; }
     @media (max-width: 767px) {
@@ -2301,6 +2313,60 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
   @media (max-width: 767px) {
     .mb-50 {
       margin-bottom: 30px; } }
+
+.section-gap {
+  padding-bottom: 120px; }
+
+.services {
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s; }
+  @media (max-width: 767px) {
+    .services {
+      margin-bottom: 40px; } }
+  .services .icon {
+    line-height: 1.3;
+    position: relative;
+    z-index: 0;
+    margin: 0 auto;
+    width: 100px;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent; }
+    .services .icon span {
+      font-size: 60px;
+      color: #d4ca68; }
+      .services .icon span:hover {
+        -webkit-animation-name: hvr-pulse-grow;
+        animation-name: hvr-pulse-grow;
+        -webkit-animation-duration: .3s;
+        animation-duration: .3s;
+        -webkit-animation-timing-function: linear;
+        animation-timing-function: linear;
+        -webkit-animation-iteration-count: infinite;
+        animation-iteration-count: infinite;
+        -webkit-animation-direction: alternate;
+        animation-direction: alternate; }
+  .services .media-body {
+    width: 100%;
+    color: rgba(0, 0, 0, 0.8); }
+    .services .media-body h3 {
+      font-size: 24px;
+      font-weight: 500;
+      color: #000; }
+    .services .media-body p {
+      margin-bottom: 0; }
+  .services.active {
+    background: #d4ca68; }
+    .services.active .icon span {
+      color: #fff; }
+    .services.active .media-body {
+      color: rgba(255, 255, 255, 0.8); }
+      .services.active .media-body h3 {
+        color: #fff; }
+      .services.active .media-body p {
+        margin-bottom: 0; }
 
 .offers_area {
   padding-bottom: 100px; }
@@ -3094,106 +3160,35 @@ span.ui-slider-handle.ui-corner-all.ui-state-default:focus {
     color: #727272;
     font-size: 14px; }
 
-.service_area {
-  padding-top: 100px;
-  padding-bottom: 70px; }
-  .service_area.minus_padding {
-    padding-bottom: 0; }
-  .service_area .single_service {
-    padding: 30px;
-    border: 1px solid #E8E8E8;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
-    margin-bottom: 30px; }
-    .service_area .single_service .service_icon {
-      line-height: 94px;
-      text-align: center;
-      width: 98px;
-      height: 98px;
-      margin: auto;
-      -webkit-border-radius: 50%;
-      -moz-border-radius: 50%;
-      border-radius: 50%;
-      /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#0181f5+0,5db2ff+100 */
-      background: #0181f5;
-      /* Old browsers */
-      background: -moz-linear-gradient(top, #0181f5 0%, #5db2ff 100%);
-      /* FF3.6-15 */
-      background: -webkit-linear-gradient(top, #0181f5 0%, #5db2ff 100%);
-      /* Chrome10-25,Safari5.1-6 */
-      background: linear-gradient(to bottom, #0181f5 0%, #5db2ff 100%);
-      /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0181f5', endColorstr='#5db2ff',GradientType=0 );
-      /* IE6-9 */ }
-    .service_area .single_service h3 {
-      font-size: 22px;
-      color: #001D38;
-      font-weight: 300;
-      margin-top: 35px;
-      margin-bottom: 23px; }
-    .service_area .single_service p {
-      font-size: 15px;
-      font-weight: 400;
-      color: #727272;
-      line-height: 28px;
-      margin-bottom: 6px; }
-    .service_area .single_service a.learn_more {
-      color: #5DB2FF;
-      font-weight: 400;
-      font-size: 15px; }
-    .service_area .single_service:hover {
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
-      border-color: transparent; }
-  .service_area .col-xl-4:nth-child(2) .single_service .service_icon {
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#00d363+0,37ef8d+100 */
-    background: #00d363;
-    /* Old browsers */
-    background: -moz-linear-gradient(top, #00d363 0%, #37ef8d 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #00d363 0%, #37ef8d 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #00d363 0%, #37ef8d 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00d363', endColorstr='#37ef8d',GradientType=0 );
-    /* IE6-9 */ }
-  .service_area .col-xl-4:nth-child(3) .single_service .service_icon {
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fd8e5e+0,fd8e5e+100 */
-    background: #fd8e5e;
-    /* Old browsers */
-    background: -moz-linear-gradient(top, #fd8e5e 0%, #fd8e5e 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #fd8e5e 0%, #fd8e5e 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #fd8e5e 0%, #fd8e5e 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fd8e5e', endColorstr='#fd8e5e',GradientType=0 );
-    /* IE6-9 */ }
-  .service_area .col-xl-4:nth-child(4) .single_service .service_icon {
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#615cfd+0,d465ef+100 */
-    background: #615cfd;
-    /* Old browsers */
-    background: -moz-linear-gradient(top, #615cfd 0%, #d465ef 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #615cfd 0%, #d465ef 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #615cfd 0%, #d465ef 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#615cfd', endColorstr='#d465ef',GradientType=0 );
-    /* IE6-9 */ }
-  .service_area .col-xl-4:nth-child(6) .single_service .service_icon {
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#a64eee+0,3c35ce+100 */
-    background: #a64eee;
-    /* Old browsers */
-    background: -moz-linear-gradient(top, #a64eee 0%, #3c35ce 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #a64eee 0%, #3c35ce 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #a64eee 0%, #3c35ce 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a64eee', endColorstr='#3c35ce',GradientType=0 );
-    /* IE6-9 */ }
+/* Services Item */
+.services-item {
+  background: #fff;
+  margin: 15px 0;
+  padding: 30px;
+  border-radius: 4px;
+  text-align: left;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -o-transition: all 0.3s ease-in-out 0s; }
+  .services-item .icon i {
+    font-size: 42px;
+    color: #000; }
+  .services-item .services-content h3 {
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 10px; }
+    .services-item .services-content h3 a {
+      font-size: 18px;
+      color: #585b60; }
+      .services-item .services-content h3 a:hover {
+        color: #000; }
+  .services-item:hover {
+    box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.08); }
+
+#service {
+  position: relative; }
 
 .expert_doctors_area {
   padding-top: 120px;
