--- a/scss/_varriable.scss
+++ b/scss/_varriable.scss
@@ -5,7 +5,7 @@ $font1:  'Poppins', sans-serif;
 $font2:  'Poppins', sans-serif;
 // fonts-size
 
-$primary-color:#17c788;
+$primary-color:#bf9410;
 $white-color:#fff;
 
 
@@ -30,7 +30,7 @@ $font_4: #8a8a8a;
 $font_5: #999999;
 $font_6: #666666;
 $font_7: #5c5c5c;
-$border_color: #fdcb9e;
+$border_color: #bf9410;
 $footer_bg: #303030;
 $sidebar_bg: #fbf9ff;
 
@@ -45,10 +45,10 @@ $big_screen:'only screen and (min-width: 1200px) and (max-width: 1440px)';
 $extra_big_screen: 'only screen and (min-width: 1200px) and (max-width: 3640px)';
 
 // ,,,,,,,,,,,
-$btn_bg: #FDAE5C;
-$btn_hover: #f5790b;
+$btn_bg: #bf9410;
+$btn_hover: #bf9410;
 $section_bg: #f7f7f7;
 $section_bg_1: #454545;
 $heading_color: #191d34;
-$heading_color2: #ff8b23;
+$heading_color2: #bf9410;
 // background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
