--- a/scss/_counter.scss
+++ b/scss/_counter.scss
@@ -7,7 +7,7 @@
             text-align: center;
         }
         h3{
-            color: #FDAE5C;
+            color: $primary-color;
             font-weight: 500;
             font-size: 42px;
             margin-bottom: 0;
