--- a/scss/_contact_action.scss
+++ b/scss/_contact_action.scss
@@ -15,7 +15,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background: #FDAE5C;
+        background: #bf9410;
         opacity: .9;
         z-index: -1;
         content: '';
