--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ li {
   list-style: none; }
 
 p {
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 300;
   line-height: 28px;
   color: #4D4D4D;
@@ -323,9 +323,6 @@ h3 {
   font-size: 15px;
   font-weight: 500;
   border: 0;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
   text-align: center;
   color: #fff !important;
   text-transform: capitalize;
@@ -361,9 +358,6 @@ h3 {
   font-weight: 400;
   border: 0;
   border: 1px solid #fff;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   text-align: center;
   color: #fff !important;
   text-transform: capitalize;
@@ -393,9 +387,6 @@ h3 {
   font-weight: 500;
   border: 0;
   border: 1px solid #FDAE5C;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius: 30px;
   text-align: center;
   text-transform: capitalize;
   -webkit-transition: 0.5s;
@@ -658,8 +649,7 @@ h3 {
       padding-top: 0; } }
   .header-area .main-header-area {
     padding: 18px 0;
-    background: #fff;
-    background: transparent; }
+    background: #fff; }
     .header-area .main-header-area.details_nav_bg {
       background: #727272;
       padding-bottom: 0; }
@@ -745,7 +735,7 @@ h3 {
         position: relative;
         margin: 0 10px; }
         .header-area .main-header-area .main-menu ul li a {
-          color: #fff;
+          color: #888484;
           font-size: 15px;
           text-transform: capitalize;
           font-weight: 500;
@@ -774,7 +764,7 @@ h3 {
             background: #bf9410;
             width: 100%;
             height: 3px;
-            bottom: -33px;
+            bottom: -5px;
             left: 0;
             opacity: 0;
             transform: scaleX(0);
@@ -838,8 +828,7 @@ h3 {
       transform: translateY(70px);
       transition: transform 500ms ease, background 500ms ease;
       -webkit-transition: transform 500ms ease, background 500ms ease;
-      box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-      background: #0d1432; }
+      box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1); }
       @media (max-width: 767px) {
         .header-area .main-header-area.sticky {
           padding: 10px 10px; } }
@@ -1140,39 +1129,6 @@ h3 {
 .property_bg {
   background-image: url(../img/banner/property.png); }
 
-.about_info_area {
-  padding-bottom: 70px; }
-  .about_info_area.plus_padding {
-    padding-top: 100px; }
-    @media (max-width: 767px) {
-      .about_info_area.plus_padding {
-        padding-top: 30px; } }
-  .about_info_area .about_text {
-    margin-bottom: 30px; }
-    .about_info_area .about_text h3 {
-      font-size: 46px;
-      font-weight: 300;
-      color: #001D38; }
-      @media (max-width: 767px) {
-        .about_info_area .about_text h3 {
-          font-size: 30px; } }
-    .about_info_area .about_text p {
-      font-size: 15px;
-      font-weight: 400;
-      color: #727272;
-      margin-bottom: 24px;
-      margin-top: 10px; }
-    .about_info_area .about_text a {
-      padding: 13px 43px; }
-  .about_info_area .about_thumb {
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-bottom: 30px; }
-    .about_info_area .about_thumb img {
-      width: 100%; }
-
 .about_mission {
   padding-top: 120px; }
   @media (max-width: 767px) {
@@ -1181,7 +1137,11 @@ h3 {
   .about_mission .about_thumb {
     margin-bottom: 20px; }
     .about_mission .about_thumb img {
-      width: 100%; }
+      width: 100%;
+      border-radius: 0.25rem !important;
+      width: 100%;
+      -webkit-box-shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.3); }
   .about_mission .about_text {
     margin-bottom: 20px;
     padding-left: 68px; }
@@ -1200,6 +1160,16 @@ h3 {
       font-weight: 400;
       color: #727272;
       line-height: 28px; }
+
+.about_statment p {
+  font-size: 15px; }
+.about_statment h3 {
+  font-size: 20px;
+  font-weight: 600px; }
+.about_statment .section_line {
+  padding-top: 94px;
+  padding-bottom: 70px;
+  border-top: 1px solid #DADAE1; }
 
 .counter_area {
   padding-bottom: 85px;
@@ -1540,7 +1510,7 @@ h3 {
     top: 0;
     width: 100%;
     height: 100%;
-    background: #FDAE5C;
+    background: #bf9410;
     opacity: .9;
     z-index: -1;
     content: ''; }
