--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,7 +19,6 @@
     .main-header-area{
         padding: 18px 0;
         background: #fff;
-        background: transparent;
         &.details_nav_bg{
             background: #727272;
             padding-bottom: 0;
@@ -146,7 +145,7 @@
                     //     margin-right: 15px;
                     // }
                     a{
-                        color: #fff;
+                        color: #888484;
                         font-size: 15px;
                         text-transform: capitalize;
                         font-weight: 500;
@@ -179,7 +178,7 @@
                             background: $primary-color;
                             width: 100%;
                             height: 3px;
-                            bottom: -33px;
+                            bottom: -5px;
                             left: 0;
                             opacity: 0;
                             transform: scaleX(0);
@@ -255,7 +254,6 @@
             transition: transform 500ms ease, background 500ms ease;
             -webkit-transition: transform 500ms ease, background 500ms ease;
             box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-            background: #0d1432;
             // padding-bottom: 0;
             @media #{$mobile_device} {
                 padding: 10px 10px;
