--- a/scss/_varriable.scss
+++ b/scss/_varriable.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap');
 // fonts
 $font1:  'Poppins', sans-serif;
 $font2:  'Poppins', sans-serif;
+$font-heading: 'Old Standard TT', serif;
 // fonts-size
 
 $primary-color:#bf9410;
@@ -52,3 +53,23 @@ $section_bg_1: #454545;
 $heading_color: #191d34;
 $heading_color2: #bf9410;
 // background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+
+
+
+$white_color: #fff;
+$btn_bg: rgb(207, 181, 121);
+$section_bg: #F7F7F7;
+$heading_color: #14303a;
+$heading_color2: #2a2a2a;
+$p_color: #14303a;
+$font_1: #7f7f7f;
+$font_2: #777777;
+$font_3: #797979;
+$font_4: #888888;
+$font_5: #999999;
+$font_6: #666666;
+$border_color: #e8ebef;
+$footer_bg: #1b212e;
+$sidebar_bg: #fbf9ff;
+$btn_hover: #000;
+$btn_bg_1: #e9eef2;
