--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background: #F5FBFF;
+    background: #1a1b19;
     .footer_top{
         padding-top: 145px;
         padding-bottom: 129px;
@@ -21,7 +21,7 @@
             .footer_title{
                 font-size: 18px;
                 font-weight: 500;
-                color: #001D38;
+                color: #fff;
                 text-transform: capitalize;
                 margin-bottom: 40px;
                 @media #{$mobile_device} {
@@ -40,14 +40,14 @@
             }
             p {
 
-                color: #919191;
-                font-size: 13px;
+                color: #8c8b8b;
+                font-size: 15px;
                 font-weight: 400;
                 line-height: 28px;
                 a{
                     color: #919191;
                     &:hover{
-                        color: #FD955D;
+                        color: $primary-color;
                     }
                 }
             
@@ -62,8 +62,8 @@
                     color: #B2B2B2;
                     font-weight: 400;
                     &:hover{
-                        color: #FD955D;
-                        border-bottom: 1px solid #FD955D
+                        color: #bf9410;
+                        border-bottom: 1px solid #bf9410
                     }
                 }
                 &.doanar{
@@ -72,8 +72,8 @@
                     color: #B2B2B2;
                     
                     &:hover{
-                        color: #FD955D;
-                        border-bottom: 1px solid #FD955D
+                        color: #bf9410;
+                        border-bottom: 1px solid #bf9410
                     }
                     &.first{
                         margin-bottom: 10px;
@@ -91,7 +91,7 @@
                         color: #919191;
                         font-weight: 400;
                         &:hover{
-                            color: #FD955D;
+                            color: #bf9410;
                         }
                     }
                 }
@@ -125,7 +125,7 @@
                     border: none;
                     font-size: 14px;
                     color: #fff;
-                    background: #FD955D;
+                    background: #bf9410;
                     padding: 10px;
                     padding: 0 22px;
                     cursor: pointer;
@@ -158,7 +158,7 @@
                 font-size: 13px;
             }
             a{
-                color: #FD955D;
+                color: #bf9410;
             }
         }
     }
@@ -188,7 +188,7 @@
                     color: #E8E8E8;
                  &:hover{
                      color: #fff !important;
-                     background: #FD955D;
+                     background: #bf9410;
                      border-color: transparent;
                  }
                 }
