--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,98 +1,113 @@
-
-// services
-.section-gap{
+// What we Do
+.section-gap {
     width: 100%;
-	padding: 80px 0;
+    padding: 80px 0;
 }
+
 .bg-gray {
-    background-color: #f5f5f5 !important;
+    background-color: #f8f9fb !important;
 }
-.services{
-	@media #{$mobile_device} {
-        margin-bottom: 40px;
-    }
-	@include transition(all 300ms ease-in-out 0s);
-	.icon{
-		line-height: 1.3;
-		position: relative;
-		z-index: 0;
-		margin: 0 auto;
-		width: 100px;
-		-webkit-transform: perspective(1px) translateZ(0);
-		transform: perspective(1px) translateZ(0);
-		box-shadow: 0 0 1px transparent;
-		span{
-			font-size: 45px;
-			line-height: 45px;			
-			color: $primary-color;
-			&:hover{
-				-webkit-animation-name: hvr-pulse-grow;
-				animation-name: hvr-pulse-grow;
-				-webkit-animation-duration: .3s;
-				animation-duration: .3s;
-				-webkit-animation-timing-function: linear;
-				animation-timing-function: linear;
-				-webkit-animation-iteration-count: infinite;
-				animation-iteration-count: infinite;
-				-webkit-animation-direction: alternate;
-				animation-direction: alternate;
-			}
-		}
-
-
-	}
-	.media-body{
-		width: 100%;
-		h3{
-			font-size: 18px;
-			font-weight: 500;
-			color: #0d1432;
-		}
-		color: rgba(0,0,0,.8);
-		p{
-			margin-bottom: 0;
-		}
-
-	}
+.mkdf-icon-box-holder {
+    position: relative;
+    width: 100%;
+    vertical-align: middle;
+    box-sizing: border-box;
+    text-align: center;
+    border-radius: 10px;
 	&:hover{
-		background-color: #fff;
-		-webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.10);
-		-moz-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.10);
-		box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.10);
+		transition: transform .2s ease-out;
+		-webkit-transform: scale(1.07) translateZ(0);
+		-moz-transform: scale(1.07) translateZ(0);
+		transform: scale(1.07) translateZ(0);
 	}
-	&.active{
-		background: #d4ca68;
-		.icon{
-			span{
-				color: #fff;
+	.services {
+		display: inline-block;
+		@media #{$mobile_device} {
+			margin-bottom: 40px;
+		}
+
+		@include transition(all 300ms ease-in-out 0s);
+	
+		.icon {
+			margin-top: 35px;
+			margin-bottom: 30px;
+			line-height: 1.3;
+			position: relative;
+			z-index: 0;
+			margin: 0 auto;
+			width: 100px;
+			span {
+				font-size: 50px;
+				line-height: 45px;
+				color: $primary-color;
+				display: block;
+				margin: 0 auto;
 			}
 		}
-		.media-body{
-			h3{
-				color: #fff;
+	
+		.media-body {
+			width: 100%;
+	
+			h3 {
+				font-size: 24px;
+				font-family: $font-heading;
+				font-weight: 700;
+				font-weight: bold;
 			}
-			color: rgba(255,255,255,.8);
-			p{
+	
+			color: rgba(0, 0, 0, .8);
+	
+			p {
 				margin-bottom: 0;
 			}
+	
+		}
+	
+		&:hover {
+			background-color: #fff;
+			-webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.10);
+			-moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.10);
+			box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.10);
+		}
+	
+	}
+	
+}
+// How It Works
+
+/* Services Item */
+#service{
+	position: relative;
+}
+.services-item{
+	background: #fff;
+    margin: 15px 0;
+    padding: 30px;
+	border-radius: 4px;
+	text-align: left;
+	box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;
+	.icon{
+		i{
+		    font-size: 42px;
+		    color:$primary-color;
 		}
 	}
-	// &.services-2{
-	// 	.icon{
-	// 		width: 90px;
-	// 		height: 90px;
-	// 		background: #d4ca68;
-	// 		@include border-radius(50%);
-	// 		span{
-	// 			color: #fff;
-	// 			font-size: 30px;
-	// 		}
-	// 	}
-	// 	h3{
-	// 		color: #fff;
-	// 	}
-	// 	.media-body{
-	// 		color: rgba(255,255,255,.8);
-	// 	}
-	// }
+	.services-content{
+		h3{
+			margin-bottom: 10px;
+		}
+	}
+	&:hover{
+		box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.08);
+		
+	}
 }
+
+
+
+
+
