--- a/scss/_property_details.scss
+++ b/scss/_property_details.scss
@@ -1,7 +1,5 @@
 .property_details{
-    position: relative;
-    margin-top: -151px;
-    padding-bottom: 90px;
+    padding: 8em 0;
     @media #{$mobile_device} {
         padding-bottom: 40px;
     }
@@ -180,5 +178,203 @@
                 color: #fff;
             }
         }
+    }
+}
+
+/*---------------------
+  Single Property Details
+-----------------------*/
+.pb-30 {
+    padding-bottom: 30px;
+}
+
+.spt-40 {
+    padding-top: 40px;
+}
+.sp-40 {
+    padding-bottom: 40px;
+}
+
+.p-ins {
+    padding: 0 20px 15px 25px;
+    -webkit-box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+}
+
+.details-top {
+    padding: 25px 0;
+    margin-bottom: 35px;
+    border-bottom: 1px solid #f3f3f3;
+    margin-left: -25px;
+    margin-right: -20px;
+}
+
+.t-details {
+    .register-id {
+        float: left;
+
+        p {
+            color: #6f6f8a;
+            font-size: 18px;
+            font-weight: 400;
+            margin-top: 17px;
+
+            span {
+                display: inline-block;
+                color: #30304e;
+            }
+        }
+    }
+
+    .popular-room-features.single-property {
+        padding-top: 0;
+        float: right;
+
+        .size {
+            float: left;
+        }
+
+        .beds {
+            float: left;
+            margin-left: 30px;
+        }
+
+        .baths {
+            float: left;
+            margin-left: 30px;
+        }
+
+        .garage {
+            float: left;
+            margin-left: 30px;
+        }
+    }
+}
+
+.property-description,
+.property-features,
+.location-map {
+    margin-bottom: 28px;
+
+    h4 {
+        color: #30304e;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 18px;
+    }
+
+    p {
+        color: #6f6f8a;
+        font-size: 14px;
+        font-weight: 300;
+        margin: 0;
+    }
+
+    iframe {
+        width: 100%;
+        height: 355px;
+        border:0
+    }
+}
+
+.property-features {
+
+    h4 {
+        margin-bottom: 13px;
+    }
+.property-table {
+        margin-left: -25px;
+        margin-right: -20px;
+        overflow-y: auto;
+        table {
+            width: 100%;
+            min-width: 350px;
+            tr {
+
+                &:nth-child(even) {
+                    background: #F8F8F9;
+                }
+
+                td {
+                    padding-top: 8px;
+                    padding-bottom: 9px;
+                    padding-left: 25px;
+                    font-size: 15px;
+                    font-weight: 400;
+                    color: #30304e;
+                    width: 120px;
+
+                    img {
+                        margin-right: 13px;
+                        height: 16px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.location-map {
+    margin-bottom: 0;
+
+    h4 {
+        margin-bottom: 24px;
+    }
+}
+
+.contact-service {
+    border-radius: 4px;
+    -webkit-box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+    padding-top: 30px;
+    padding-bottom: 40px;
+    text-align: center;
+
+    img {
+        margin-bottom: 12px;
+    }
+
+    p {
+        color: #6F6F8A;
+        font-size: 18px;
+        font-weight: 300;
+        margin-bottom: 6px;
+    }
+
+    h5 {
+        color: #30304e;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+
+    table {
+        width: 100%;
+        margin-bottom: 32px;
+
+        tr {
+
+            &:nth-child(odd) {
+                background: #F8F8F9;
+            }
+
+            td {
+                color: #6f6f8a;
+                font-size: 16px;
+                font-weight: 300;
+                padding: 10px 0;
+
+                span {
+                    color: #30304e;
+                    display: inline-block;
+                }
+            }
+        }
+    }
+
+    .site-btn.list-btn {
+        color: #fff;
+        background: #8AD144;
+        border: none;
     }
 }
