--- a/scss/theme-default.css
+++ b/scss/theme-default.css
@@ -1,5 +1,6 @@
 /* 1. Theme default css */
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap");
 body {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
@@ -38,9 +39,14 @@ button {
   color: #1F1F1F;
   outline: medium none; }
 
-h1, h2, h3, h4, h5 {
+h1, h2 {
   font-family: "Poppins", sans-serif;
-  color: #001D38; }
+  color: #2d2e32; }
+
+h3, h4, h5 {
+  color: #2d2e32;
+  font-family: "Old Standard TT", serif;
+  font-weight: 700; }
 
 h1 a,
 h2 a,
