--- a/scss/theme-default.scss
+++ b/scss/theme-default.scss
@@ -36,10 +36,16 @@ button {
 	color: #1F1F1F;
 	outline: medium none;
 }
-h1,h2,h3,h4,h5{
+h1,h2{
 	font-family: $font1;
-	color: #001D38;
+	color: #2d2e32;
 }
+h3,h4,h5{
+	color: #2d2e32;
+	font-family: $font-heading;
+	font-weight: 700;
+}
+
 h1 a,
 h2 a,
 h3 a,
