--- a/scss/_popular_property.scss
+++ b/scss/_popular_property.scss
@@ -123,7 +123,7 @@
 
 /************passion css start***************/
 .apartment_part{
-    padding-top: 130px;
+    padding: 6em 0;    
     @media #{$small_mobile}{
         padding-top: 70px;
     }
@@ -135,6 +135,13 @@
     }
     @media #{$medium_device}{
     
+    }
+    .more_property_btn{
+        margin-top: 30px;
+    }
+    .single_appartment_part{
+        margin-bottom: 30px;
+        
     }
     .section_tittle{
         h1{
