--- a/scss/_contact_action.scss
+++ b/scss/_contact_action.scss
@@ -23,7 +23,7 @@
     .action_heading{
         h3{
             margin-bottom: 0;
-            font-size: 42px;
+            font-size: 28px;
             color: #fff;
             font-weight: 400;
             @media #{$tablet_device}{
@@ -59,7 +59,7 @@
             padding: 13px 31px;
             display: inline-block;
             &:hover{
-                color: #000 !important;
+                color: $primary-color !important;
                 background: #fff !important;
                 border-color: transparent;
             }
