--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,6 +16,9 @@
     @media #{$tablet_device} {
         padding-top: 0;
     }
+    .logo{
+        margin-left: 15px;
+    }
     .main-header-area{
         padding: 18px 0;
         background: #fff;
@@ -105,6 +108,7 @@
            }
            .book_btn{
                margin-left: 30px;
+               margin-right: 15px;
                @media #{$mid_device} {
                    margin-left: 0;
                }
@@ -285,7 +289,7 @@
                             background: $primary-color;
                             width: 100%;
                             height: 3px;
-                            bottom: -27px;
+                            bottom: -5px;
                             left: 0;
                             opacity: 0;
                             transform: scaleX(0);
@@ -339,7 +343,7 @@
                         margin: 0 5px;
                     }
                     i{
-                        color: #FDAE5C;
+                        color: $primary-color;
                         margin-right: 7px;
                     }
                   }
